fix(content): 🐛 wrapping of text content under bio section (#33)

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -77,6 +77,7 @@ a#right {
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 60%;
 }
 
 #content-header {
@@ -123,15 +124,6 @@ a#right {
   font-family: 'Roboto Slab', serif;
   text-align: left;
   margin-bottom: 16px;
-}
-
-#content > h1 + ul + p:first-letter {
-  font-size: 54px;
-  font-family: 'Tangerine';
-  font-weight: 700;
-}
-#content > h1 + ul + p:first-line {
-  line-height: 0.7;
 }
 
 #content > h1 + ul + p > a {
